Changed form submitting and added review panels - Form serializes to an array - Topic is saved in a variable - Added a function to create review panels(visually) - Gets the first json file and converts it to panels to show visually - Fixed a style problem(form was stuck in the heading of the next review)

--- a/Style/Style.css
+++ b/Style/Style.css
@@ -13,4 +13,5 @@
 }
 form#ajax-topic {
     margin-top: 20px;
+    min-height: 150px;
 }
